--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     <footer>
                 <a title="Discord" href="https://discord.gg/yE4rs2Vsmx">discord.gg/yE4rs2Vsmx</a>
                 <a title="Link" href="https://learnmath.design">Latest Link</a>
-                <span style="margin-left: auto">Made By: Paxton &amp; Robert</span>
+                <span style="margin-left: auto">Made By: Victor</span>
 
     </footer>
     <script src="uv/uv.bundle.js"></script>
